# flexric

./: .gitmodules  Makefile  MakefileVars.mk  README.md  makefileVars.mk
.github/workflows/: docker-image.yml  docker-image2.yml  flexRIC-CI.yml  flexric-ci.yml
configs/: flexric.conf  gnb-cu.conf  gnb-du.conf  xApp.conf
deployments/: compose.yaml
docker/: Dockerfile.emu-gnb-cu.ubuntu  Dockerfile.emu-gnb-du.ubuntu  Dockerfile.flexric.rhel  Dockerfile.flexric.rocky  Dockerfile.flexric.ubuntu  Dockerfile.gnb-cu.ubuntu  Dockerfile.gnb-du.ubuntu  Dockerfile.qmai.minideb  Dockerfile.qmai.ubuntu
docker/scripts/: cu_entrypoint.sh  du_entrypoint.sh  ric_entrypoint.sh
helm-chart/flexric/: Chart.yaml  usapValues.yaml  values.yaml
helm-chart/flexric/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
helm-chart/flexric/templates/tests/: test-connection.yaml
scripts/: cpRicFiles.sh
xApps/: CMakeLists.txt
xApps/cpp/: CMakeLists.txt
xApps/cpp/qmai/: CMakeLists.txt  config.conf  main.cpp
xApps/cpp/qmai/include/: defer.hpp  e2.hpp  kpmManager.hpp  logger.hpp  rnib.hpp
xApps/cpp/qmai/libs/: CMakeLists.txt  kpmManager.cpp  logger.cpp  rnib.cpp
xApps/cpp/qmai/src/: main.cpp
xApps/cpp/qmai/tests/: loggerTest.cpp
